用户信息缓存改用Redis，方便集群部署 部分代码及注释调整